# Non-Linear-Means-Filter

./: .gitignore  Non-Local_Means_Filter_WS23.kdev4  README.md  meson.build
.kdev4/: Non-Local_Means_Filter_WS23.kdev4
input_img/: einstein_128.pgm  girl_512.pgm
lib/: meson.build
output_img/: girl_512_cpu.pgm  girl_512_cpu_opencv.pgm  girl_512_gpu.pgm
src/: Non-Local_Means_Filter.cpp  Non_Local_Means_Filter.cl
